# Travel-WebApp

./: .gitignore  Dockerfile  README.md  forme  package-lock.json  package.json  pyproject.toml
src/: main.py
src/back_end/: login.py  security.py
src/back_end/controllers/: hotel.js  room.js
src/back_end/models/: cart.py  flight.py  hotel.py  image.py  reservation.py  room.py  trip.py  userAccount.py  userLogin.py
src/back_end/routers/: admin_router.py  cart_router.py  flight.py  frontend_images_routes.py  hotel.py  images_routes.py  login.py  reservation_router.py  room.py  userAccount.py
src/database/flights_database/: flight_db.py  flights_database.db
src/database/hotel_database/: hotel_db.py  (+3 more)
src/front-end/: TravellingPlanner.html  style.css
src/front_end/: TravellingPlanner.html  account.html  favorites.html  flights.html  hotels.html  login.html  login_register_connection.js  offers.html  orders.html  style.css
travel-app/: .firebaserc  package-lock.json  package.json
travel-app/.firebase/: hosting.YnVpbGQ.cache
travel-app/public/: index.html
travel-app/src/: Account.js  AddImg.js  AdminFlights.js  AdminHotels.js  AdminPannel.js  AdminSmth.js  App.css  App.js  Cart.js  CheckAdmin.js  DecodeToken.js  DeleteFlight.js  DeleteHotel.js  DisplayImagePage.js  FetchFlights.js  FetchHotels.js  FlightDetail.js  Flights.js  Home.js  HotelDetail.js  Hotels.js  ImageDisplay.js  ImageSelector.js  Login.js  MainPage.js  Offers.js  Orders.js  Register.js  UserInfoFetch.js  api.js  firebase.js  headerSearch.css  index_fb.js  logout_function.js  searchbar.js
(+5 files in other folders)
